Dossier Nov 1 deployment. Functionality completed

--- a/dossier/app/resources/appendix4-en.json
+++ b/dossier/app/resources/appendix4-en.json
@@ -97,8 +97,8 @@
   "COUNTRYORIGIN": "Country of origin",
   "SPECIFY_THE": "Specify the other ",
   "HUMAN_ANIMAL_SOURCE": "Human / Animal Sourced?",
-  "APPENDIX4": "Appendix 4",
-  "MISSING_APPENDIX": "Missing Appendix 4 Ingredients",
+  "APPENDIX4": "Animal / Human Sourced",
+  "MISSING_APPENDIX": "Missing Animal / Human Sourced Ingredients",
   "UNKNOWN_COUNTRY_DETAILS":"Unknown Country Details",
-  "ING_DETAILS": "Appendix 4 Details"
+  "ING_DETAILS": "Human / Animal Sourced Record"
 }
