--- a/dossier/app/resources/appendix4-fr.json
+++ b/dossier/app/resources/appendix4-fr.json
@@ -93,8 +93,9 @@
   "AGEANIMALS": "fr_Age of animals in months",
   "COUNTRYORIGIN": "fr_Country of origin",
   "SPECIFY_THE": "Spécifiez l'autre",
-  "MISSING_APPENDIX": "fr_Missing Appendix 4 Ingredients",
+  "MISSING_APPENDIX": "fr_Missing Animal / Human Sourced Ingredients",
   "UNKNOWN_COUNTRY_DETAILS":"fr_Unknown Country Details",
-  "ING_DETAILS": "Appendix 4 Details"
+  "ING_DETAILS": "fr_Human / Animal Source Record",
+  "APPENDIX4": "fr_Animal / Human Sourced"
 
 }
