Nov 15 deployment. Did not clean vcs first

--- a/dossier/app/resources/appendix4-en.json
+++ b/dossier/app/resources/appendix4-en.json
@@ -1,5 +1,5 @@
 {
-  "NERVOUSYSTEM": "Nervous System",
+  "NERVOUS_SYSTEM": "Nervous System",
   "BRAIN": "brain",
   "BRAINSTEM": "brain stem",
   "CEREBELLUM": "cerebellum",
@@ -11,8 +11,8 @@
   "RETINA": "retina or optic nerve",
   "SPINALCORD": "spinal cord",
   "TRIGEMINAL": "trigerminal ganglia",
-  "OTHERNERVOUS": "other nervous system",
-  "DIGESTIVESYSTEM": "Digestive System",
+  "NERVOUS_OTHER": "other nervous system",
+  "DIGESTIVE_SYSTEM": "Digestive",
   "APPENDIX": "appendix",
   "BILE": "bile",
   "DISTALILEUM": "distal ileum",
@@ -20,8 +20,8 @@
   "SALIVA": "saliva or salivary gland",
   "SMALLINTESTINE": "small intestine other than distal ileum",
   "STOMACH": "stomach",
-  "DIGESTIVEOTHER": "other digestive system",
-  "REPRODUCTSYSTEM": "Reproductive System",
+  "DIGESTIVE_OTHER": "other digestive system",
+  "REPRODUCT_SYSTEM": "Reproductive",
   "MILK": "milk or milk products",
   "KIDNEY": "kidney",
   "COLOSTRUM": "colostrum",
@@ -32,21 +32,21 @@
   "SEMEN": "semen",
   "TESTES": "testes",
   "URINE": "urine",
-  "OTHERREPROD": "other reproductive system",
-  "CARDIOSYSTEM": "Cardio-Respiratory System",
+  "REPROD_OTHER": "other reproductive system",
+  "CARDIO_SYSTEM": "Cardio-Respiratory",
   "HEART": "Heart or pericardium",
   "LUNG": "lung",
   "NASALFLUID": "nasal fluid",
   "TRACHEA": "trachea",
   "PLACENTALFLUID": "placental fluid",
-  "CARDIOOTHER": "other cardio-respiratory system",
-  "IMMUNESYSTEM": "Immune System",
+  "CARDIO_OTHER": "other cardio-respiratory system",
+  "IMMUNE_SYSTEM": "Immune",
   "LYMPH": "lymph nodes",
   "SPLEEN": "spleen",
   "THYMUS": "thymus",
   "TONSILS": "tonsils",
-  "IMMUNEOTHER": "other immune system",
-  "SKINGLANDSYSTEM": "Skin and Glandular System",
+  "IMMUNE_OTHER": "other immune system",
+  "SKINGLAND_SYSTEM": "Skin and Glandular",
   "ADRENAL": "adrenal gland or tissue",
   "HAIR": "hair, feathers, hooves",
   "LIVER": "liver",
@@ -54,8 +54,8 @@
   "PITUARYGLAND": "pituitary gland",
   "SKINHIDES": "skin or hides",
   "THYROID": "thyroid or parathyroid",
-  "SKINOTHER": "other skin or glandular system",
-  "MUSCULOSYSTEM": "Musculo-Skeletal System",
+  "SKIN_OTHER": "other skin or glandular system",
+  "MUSCULO_SYSTEM": "Musculo-Skeletal",
   "ABDOMEN": "abdomen",
   "SKULL": "skull",
   "BONES": "bones other than vertebral column or skull",
@@ -63,8 +63,8 @@
   "TENDONS": "tendons or ligaments",
   "VERTEBRALCOLUMN": "vertebral column",
   "MUSCLE": "muscle",
-  "MUSCLEOTHER": "other musculo-skeletal system",
-  "OTHERTISSUE": "Other Tissues or Fluids",
+  "MUSCLE_OTHER": "other musculo-skeletal system",
+  "OTHERTISSUE_SYSTEM": "Other Tissues or Fluids",
   "ADIPOSE": "adipose or omentum",
   "ASCITES": "acscites",
   "ANTLERV": "antler velvet",
@@ -76,20 +76,20 @@
   "BONEMARROW": "bone marrow",
   "EYESCORNEA": "eyes or cornea",
   "GALL": "gall bladder",
-  "OTHERFLUIDSEL": "other types of tissues or fluids",
-  "NONHUMANPRIMATE": "Non-human primate type",
-  "AQUATICTYPE": "Aquatic species such as fish, molluscs and crustacean",
-  "AVIANTYPE": "Avian such as chicken, turkey and duck",
-  "BOVINETYPE": "Bovine such as cattle, bison type",
-  "CANINETYPE": "Canine type",
-  "CAPRINETYPE": "Caprine such as goat type",
-  "CERVIDAETYPE": "Cervidae such as deer, elk(wapiti) and moose type",
-  "EQUINETYPE": "Equine such as horse type",
-  "FELINETYPE": "Feline such as cat type",
-  "OVINETYPE": "Ovine type",
-  "PORCINETYPE": "Porcine such as pig type",
-  "RODENTTYPE": "Rodents such as mouse, hamster, rat and rabbit type",
-  "OTHERANIMALTYPE": "Other animal type",
+  "FLUIDS_OTHER": "other types of tissues or fluids",
+  "NONHUMANPRIMATE_TYPE": "Non-human primate type",
+  "AQUATIC_TYPE": "Aquatic species such as fish, molluscs and crustacean",
+  "AVIAN_TYPE": "Avian such as chicken, turkey and duck",
+  "BOVINE_TYPE": "Bovine such as cattle, bison type",
+  "CANINE_TYPE": "Canine type",
+  "CAPRINE_TYPE": "Caprine such as goat type",
+  "CERVIDAE_TYPE": "Cervidae such as deer, elk(wapiti) and moose type",
+  "EQUINE_TYPE": "Equine such as horse type",
+  "FELINE_TYPE": "Feline such as cat type",
+  "OVINE_TYPE": "Ovine type",
+  "PORCINE_TYPE": "Porcine such as pig type",
+  "RODENT_TYPE": "Rodents such as mouse, hamster, rat and rabbit type",
+  "OTHERANIMAL_TYPE": "Other animal type",
   "CONTROLLEDPOP": "Controlled Population",
   "BIOTECHDERIVED": "Biotechnology Derived Animal",
   "CELLLINE": "Cell line",
@@ -100,5 +100,23 @@
   "APPENDIX4": "Animal / Human Sourced",
   "MISSING_APPENDIX": "Missing Animal / Human Sourced Ingredients",
   "UNKNOWN_COUNTRY_DETAILS":"Unknown Country Details",
-  "ING_DETAILS": "Human / Animal Sourced Record"
+  "ING_DETAILS": "Human / Animal Sourced Record",
+  "ANIMAL_TYPE_LBL":"Animal Type Details",
+  "ANIMAL_TYPE":"Animal Type",
+  "ANIMAL_DETAILS": "Provide the animal type description",
+  "ANIMAL_SOURCE":"Animal Source",
+  "ANIMAL_TYPE_DETAILS": "Animal Type Details",
+  "ANIMAL_SRCS":"Animal Sources",
+  "ANIMAL_CTRIES_ORIGIN":"Animal Countries of Origin",
+  "ANIMAL_SRC_ADD": "Add Animal Source",
+  "TISSUES_FLUIDS_LBL": "Tissues or Fluids Details",
+  "SYSTEM_TYPE": "System",
+  "SYSTEM_DETAILS": "System Details",
+  "SYSTEM_OTHER": "Other Details",
+  "TISSUES_FLUIDS_ADD": "Add Tissues or Fluids",
+  "TISSUES_FLUIDS_SRCS": "Tissues or Fluids sources",
+  "TISSUE_FLUID": "Tissue or Fluid",
+  "ANIMAL_SRC": "Animal Source",
+  "EXTRA_APPENDIX": "Human / Animal Sourced Records not Referenced in any Formulation"
+
 }
