--- a/dossier/app/resources/appendix4-fr.json
+++ b/dossier/app/resources/appendix4-fr.json
@@ -1,4 +1,5 @@
 {
+  "NERVOUS_SYSTEM": "fr_Nervous System",
   "BRAIN": "Cerveau",
   "BRAINSTEM": "Tronc cérébral",
   "CEREBELLUM": "Cervelet",
@@ -9,8 +10,8 @@
   "RETINA": "Moelle épinière",
   "SPINALCORD": "Moelle épinière",
   "TRIGEMINAL": "Ganglion de Gasser",
-  "OTHERNERVOUS": "Veuillez spécifier le système nerveux",
-  "DIGESTIVESYSTEM": "Système digestif",
+  "NERVOUS_OTHER": "Veuillez spécifier le système nerveux",
+  "DIGESTIVE_SYSTEM": "Système digestif",
   "APPENDIX": "Appendice",
   "BILE": "Bile",
   "DISTALILEUM": "Iléon distal",
@@ -18,8 +19,8 @@
   "SALIVA": "Salive ou glande salivaire",
   "SMALLINTESTINE": "Intestin grêle, autre que l’iléon distal",
   "STOMACH": "Estomac",
-  "DIGESTIVEOTHER": "Veuillez spécifier le système digestif",
-  "REPRODUCTSYSTEM": "Systèmes reproductif et urinaire",
+  "DIGESTIVE_OTHER": "Veuillez spécifier le système digestif",
+  "REPRODUCT_SYSTEM": "Systèmes reproductif et urinaire",
   "MILK": "Lait ou Produits laitiers",
   "KIDNEY": "Reins",
   "COLOSTRUM": "Reins",
@@ -30,21 +31,21 @@
   "SEMEN": "Sperme",
   "TESTES": "Testicules",
   "URINE": "Testicules",
-  "OTHERREPROD": "Veuillez spécifier le système reproducteur",
-  "CARDIOSYSTEM": "Système cardio-respiratoire",
+  "REPROD_OTHER": "Veuillez spécifier le système reproducteur",
+  "CARDIO_SYSTEM": "Système cardio-respiratoire",
   "HEART": "Cœur ou péricarde",
   "LUNG": "Cœur/péricarde",
   "NASALFLUID": "Fluide nasal",
   "TRACHEA": "Trachée",
   "PLACENTALFLUID": "Fluide du placenta",
-  "CARDIOOTHER": "Veuillez spécifier le système cardiorespiratoire",
-  "IMMUNESYSTEM": "Système immunitaire",
+  "CARDIO_OTHER": "Veuillez spécifier le système cardiorespiratoire",
+  "IMMUNE_SYSTEM": "Système immunitaire",
   "LYMPH": "Ganglions lymphatiques",
   "SPLEEN": "Rate",
   "THYMUS": "Thymus",
   "TONSILS": "Amygdales",
-  "IMMUNEDETAILS ": "Veuillez spécifier le système immunitaire",
-  "SKINGLANDSYSTEM": "Peau et système glandulaire",
+  "IMMUNE_OTHER ": "Veuillez spécifier le système immunitaire",
+  "SKINGLAND_SYSTEM": "Peau et système glandulaire",
   "ADRENAL": "Glande ou tissu surrénalien",
   "HAIR": "Cheveu, plumes, sabots",
   "LIVER": "Foie",
@@ -52,7 +53,7 @@
   "PITUARYGLAND": "Hypophyse",
   "SKINHIDES": "Peau ou cuirs",
   "THYROID": "Thyroïde ou parathyroïde",
-  "SKINDETAILS": "Veuillez spécifier la peau ou le système glandulaire",
+  "SKIN_OTHER": "Veuillez spécifier la peau ou le système glandulaire",
   "ABDOMEN": "Abdomen",
   "SKULL": "Crâne",
   "BONES": "Os autre que la colonne vertébrale et le crâne",
@@ -61,7 +62,7 @@
   "VERTEBRALCOLUMN": "Colonne vertébrale",
   "MUSCLE": "Colonne vertébrale",
   "MUSCLEDETAIL": "Veuillez spécifier le système musculosquelettique",
-  "OTHERTISSUE": "Autres tissus ou fluides",
+  "OTHERTISSUE_SYSTEM": "Autres tissus ou fluides",
   "ADIPOSE": "Veuillez spécifier les tissus adipeux ou épiploon",
   "ASCITES": "Ascite",
   "ANTLERV": "Velours de cervidé",
@@ -73,20 +74,20 @@
   "BONEMARROW": "Moelle osseuse",
   "EYESCORNEA": "Yeux ou cornée",
   "GALL": "Vésicule biliaire",
-  "OTHERFLUIDDETAILS": "Veuillez spécifier les autres types de tissus ou de fluides d'origine"
-  "NONHUMANPRIMATE": "fr_Non-human primate type",
-  "AQUATICTYPE": "fr_Aquatic species such as fish, molluscs and crustacean",
-  "AVIANTYPE": "fr_Avian such as chicken, turkey and duck",
-  "BOVINETYPE": "fr_Bovine such as cattle, bison type",
-  "CANINETYPE": "fr_Canine type",
-  "CAPRINETYPE": "fr_Caprine such as goat type",
-  "CERVIDAETYPE": "fr_Cervidae such as deer, elk(wapiti) and moose type",
-  "EQUINETYPE": "fr_Equine such as horse type",
-  "FELINETYPE": "fr_Feline such as cat type",
-  "OVINETYPE": "fr_Ovine type",
-  "PORCINETYPE": "fr_Porcine such as pig type",
-  "RODENTTYPE": "fr_Rodents such as mouse, hamster, rat and rabbit type",
-  "OTHERANIMALTYPE": "fr_Other animal type",
+  "FLUIDS_OTHER": "Veuillez spécifier les autres types de tissus ou de fluides d'origine",
+  "NONHUMANPRIMATE_TYPE": "fr_Non-human primate type",
+  "AQUATIC_TYPE": "fr_Aquatic species such as fish, molluscs and crustacean",
+  "AVIAN_TYPE": "fr_Avian such as chicken, turkey and duck",
+  "BOVINE_TYPE": "fr_Bovine such as cattle, bison type",
+  "CANINE_TYPE": "fr_Canine type",
+  "CAPRINE_TYPE": "fr_Caprine such as goat type",
+  "CERVIDAE_TYPE": "fr_Cervidae such as deer, elk(wapiti) and moose type",
+  "EQUINE_TYPE": "fr_Equine such as horse type",
+  "FELINE_TYPE": "fr_Feline such as cat type",
+  "OVINE_TYPE": "fr_Ovine type",
+  "PORCINE_TYPE": "fr_Porcine such as pig type",
+  "RODENT_TYPE": "fr_Rodents such as mouse, hamster, rat and rabbit type",
+  "OTHERANIMAL_TYPE": "fr_Other animal type",
   "CONTROLLEDPOP": "fr_Controlled Population",
   "BIOTECHDERIVED": "fr_Biotechnology Derived Animal",
   "CELLLINE": "fr_Cell line",
@@ -96,6 +97,22 @@
   "MISSING_APPENDIX": "fr_Missing Animal / Human Sourced Ingredients",
   "UNKNOWN_COUNTRY_DETAILS":"fr_Unknown Country Details",
   "ING_DETAILS": "fr_Human / Animal Source Record",
-  "APPENDIX4": "fr_Animal / Human Sourced"
+  "APPENDIX4": "fr_Animal / Human Sourced",
+  "ANIMAL_TYPE_LBL":"fr_Animal Type Details",
+  "ANIMAL_TYPE":"fr_Animal Type",
+  "ANIMAL_DETAILS": "fr_Provide the animal type description",
+  "ANIMAL_SOURCE":"fr_Animal Source",
+  "ANIMAL_TYPE_DETAILS": "fr_Animal Type Details",
+  "ANIMAL_SRCS":"fr_Animal Sources",
+  "ANIMAL_CTRIES_ORIGIN":"fr_Animal Countries of Origin",
+  "ANIMAL_SRC_ADD": "fr_Add Animal Source",
+  "TISSUES_FLUIDS_LBL": "fr_Tissues or Fluids Details",
+  "SYSTEM_TYPE": "fr_System",
+  "SYSTEM_DETAILS": "fr_System Details",
+  "SYSTEM_OTHER": "fr_Other Details",
+  "TISSUES_FLUIDS_ADD": "fr_Add Tissues or Fluids",
+  "TISSUES_FLUIDS_SRCS": "fr_Tissues or Fluids sources",
+  "ANIMAL_SRC": "fr_Animal Source",
+  "EXTRA_APPENDIX": "fr_Human / Animal Sourced Records not Referenced in any Formulation"
 
 }
