CSP form 2025 Version - Web accessibility and client feedback changes

--- a/certificate2025/external/en/assets/data/timingOfApplicant.json
+++ b/certificate2025/external/en/assets/data/timingOfApplicant.json
@@ -9,6 +9,6 @@
   "ariaEn": "GRANT",
   "ariaFr": "GRANT",
   "en": " on the basis of a patent granted after the day on which the Notice of Compliance (NOC) for the above noted NDS is issued (before the end of the 120-day period that begins on the day on which the patent is granted)",
-  "fr": " en vertu d’un brevet délivré après que l’avis de conformité (AC) a été délivré pour la PDN susmentionnée (avant la fin de la période de 120 jours qui commence le jour où le brevet est délivré)."
+  "fr": " en vertu d’un brevet délivré après le jour que l’avis de conformité (AC) a été délivré pour la PDN susmentionnée (avant la fin de la période de 120 jours qui commence le jour où le brevet est délivré)."
 }
 ]
